--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-/result/result3/*
-!/result/result3/transfer/
-!/result/result3/transfer/*
+/result/*
+!/result/transfer/
+!/result/transfer/*
 /pics/*
 /data/*
 /data_task/*
